test/negative/BadVoid3.java
public class BadVoid {
    public BadVoid() {
        int x = 7;
        int y = (void)x;
    }
}
